--- a/helm/prod.yaml
+++ b/helm/prod.yaml
@@ -1,2 +1,2 @@
 component : catalogue
-params: "DOCUMENTDB:prod.catalogue.mongo,MONGO_URL:prod.docdb_url.catalogue"
+params: "DOCUMENTDB:prod.catalogue.mongo,MONGO_URL:prod.docdb_url_catalogue"
